# wms

./: .env.example  .gitignore  ARCHITECTURE.md  BACKUP_RECOVERY.md  CURRENT_STATUS.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  HANDOFF.md  LICENSE  OPERATIONS.md  PROJECT.md  QA_Seed_Dataset_Derived.md  README.md  TEMPLATE LAPORAN PROPOSAL.doc  clean_pagesize.py  docker-compose.prod.yml  docker-compose.yml  fix_ts.py  implementation_plan.md  refactor.py  requirements_analysis.md  restore_imports.py  setup_vps.sh  task.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  68e9b8a12140_add_item_model.py  943ba4fce79f_add_inventory_transactions_and_branch_.py  cfd8947d315e_opname_enhancements.py  d3437a52900b_rename_canceled_to_cancelled.py  d9bcc51a8bf1_add_transfers_and_stock_opname.py  dfcd698e0120_add_stock_in_and_outbound.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py
backend/app/models/: __init__.py  audit_log.py  inventory.py  item.py  outbound.py  stock_in.py  stock_opname.py  transfer.py
backend/app/repositories/: auth.py  base.py  branch.py  item.py  (+8 more)
backend/scripts/: audit_results.json  audit_validation_results.json  compile_docs.py  full_operational_audit.py  prepare_go_live.py  qa_full_system_audit.py  qa_verify_phase3.py  qa_verify_phase4.py  qa_verify_phase5.py  seed_admin.py  seed_branches.py  seed_catalog.py  seed_full_qa_dataset.py  seed_runner.py  seed_uom.py  test_concurrency_audit.py  verify_backup.sh
(+174 files in other folders)
